community-half-ready

--- a/pages/career/careers.html
+++ b/pages/career/careers.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Community</title>
-    <link rel="stylesheet" href="./css/global.css">
-    <link rel="stylesheet" href="./css/home.css">
+    <link rel="stylesheet" href="../../css/global.css">
+    <link rel="stylesheet" href="./careers.css">
 </head>
 <body>
     <!-- header start -->
     <header class="header">
         <div class="container">
             <nav class="site-nav">
-                <a href="./index.html" class="home-page"><img class="logo" src="./images/Logo.svg" alt="logo" class="header-logo"></a>
+                <a href="../../index.html" class="home-page"><img class="logo" src="../../images/Logo.svg" alt="logo" class="header-logo"></a>
                 <ul class="header-list">
-                    <li class="header-item"><a href="./pages/about-us/about-us.html" class="header-link">About Us</a></li>
-                    <li class="header-item"><a href="./pages/career/careers.html" class="header-link">Careers</a></li>
-                    <li class="header-item"><a href="./pages/services/services.html" class="header-link">Services</a></li>
-                    <li class="header-item"><a href="./pages/blog/blog.html" class="header-link">Blog</a></li>
-                    <li class="header-item"><a href="./pages/contact-us/contac-us.html" class="header-link">Contact us</a></li>
+                    <li class="header-item"><a href="../about-us/about-us.html" class="header-link ">About Us</a></li>
+                    <li class="header-item"><a href="../career/careers.html" class="header-link active">Careers</a></li>
+                    <li class="header-item"><a href="../services/services.html" class="header-link">Services</a></li>
+                    <li class="header-item"><a href="../blog/blog.html" class="header-link">Blog</a></li>
+                    <li class="header-item"><a href="../contact-us/contac-us.html" class="header-link">Contact us</a></li>
                 </ul>
                 <a href="#" class="header-btn">Clone project</a></li>
             </nav>
@@ -28,7 +28,7 @@
     <!-- main start -->
     <main class="main">
         <div class="main-wrapper container">
-            
+            <a href="./apply/apply.html">Apply</a>
         </div>
     </main>
     <!-- main end -->
@@ -50,9 +50,9 @@
                 <div class="footer-middle-content"><p>Company</p></div>
                 <ul class="footer-middle-list">
                     <li class="middle--list-item"><a href="../pages/about-us.html" class="middle-list-links">About us</a></li>
-                    <li class="middle--list-item"><a href="../pages/careers.html" class="middle-list-links">Careers</a></li>
-                    <li class="middle--list-item"><a href="../pages/services.html" class="middle-list-links">Services</a></li>
-                    <li class="middle--list-item"><a href="../pages/blog.html" class="middle-list-links">Blog</a></li>
+                    <li class="middle--list-item"><a href="../../pages/career/careers.html" class="middle-list-links">Careers</a></li>
+                    <li class="middle--list-item"><a href="../../pages/services.html" class="middle-list-links">Services</a></li>
+                    <li class="middle--list-item"><a href="../../pages/blog/blog.html" class="middle-list-links">Blog</a></li>
                 </ul>
             </div>
             <div class="footer-top-right-middle">
@@ -78,8 +78,8 @@
         <div class="footer-bootom">
             <div class="footer-rights">© All rights reserved – Finsweet</div>
             <ul class="footer-bottom-list">
-                <li class="bottom-list-item"><a href="./pages/privacy/privacy.html" class="bottom-link">Privacy Policy</a></li>
-                <li class="bottom-list-item"><a href="./pages/privacy/privacy.html" class="bottom-link">Terms & Conditions</a></li>
+                <li class="bottom-list-item"><a href="../privacy/privacy.html" class="bottom-link">Privacy Policy</a></li>
+                <li class="bottom-list-item"><a href="../privacy/privacy.html" class="bottom-link">Terms & Conditions</a></li>
             </ul>
         </div>
     </div>
