--- a/pages/privacy/privacy.html
+++ b/pages/privacy/privacy.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Privacy</title>
-    <link rel="stylesheet" href="../css/global.css">
+    <link rel="stylesheet" href="../../css/global.css">
     <link rel="stylesheet" href="./privacy.css">
 </head>
 <body>
     <!-- header start -->
     <header class="header">
         <nav class="site-nav">
-            <img src="../images/Logo.svg" alt="logo" class="header-logo">
+           <a href="../../index.html" class="home-page"> <img src="../../images/Logo.svg" alt="logo" class="header-logo"></a>
             <ul class="header-list">
-                <li class="header-item"><a href="../pages/about-us.html" class="header-link">About Us</a></li>
-                <li class="header-item"><a href="../pages/careers.html" class="header-link">Careers</a></li>
-                <li class="header-item"><a href="../pages/services.html" class="header-link">Services</a></li>
-                <li class="header-item"><a href="../pages/blog.html" class="header-link">Blog</a></li>
-                <li class="header-item"><a href="../pagescontac-us.html" class="header-link">Contact us</a></li>
+                <li class="header-item"><a href="../about-us/about-us.html" class="header-link">About Us</a></li>
+                <li class="header-item"><a href="../career/careers.html" class="header-link">Careers</a></li>
+                <li class="header-item"><a href="../services/services.html" class="header-link">Services</a></li>
+                <li class="header-item"><a href="../blog/blog.html" class="header-link">Blog</a></li>
+                <li class="header-item"><a href="../contact-us/contac-us.html" class="header-link">Contact us</a></li>
                 <li class="header-item"><a href="#" class="header-btn">Clone project</a></li>
             </ul>
         </nav>
@@ -46,13 +46,13 @@
     <footer class="footer">
         <div class="footer-top">
             <div class="footer-top-left">
-                <img src="../images/footer-logo.svg" alt="logo" class="footer-logo">
+                <img src="../../images/footer-logo.svg" alt="logo" class="footer-logo">
                 <div class="footer-left-content"><h1>Bespoke software <br> solutions</h1></div>
                  <ul class="footer-list">
-                    <li class="footer-item"><a href="https://www.facebook.com/" class="footer-icon"><img src="./images/facebook.svg" alt="" class="icons"></a></li>
-                    <li class="footer-item"><a href="https://www.youtube.com/" class="footer-icon"><img src="./images/youtube.svg" alt="" class="icons"></a></li>
-                    <li class="footer-item"><a href="https://www.instagram.com/" class="footer-icon"><img src="./images/instagram.svg" alt="" class="icons"></a></li>
-                    <li class="footer-item"><a href="https://www.twitter.com/" class="footer-icon"><img src="./images/twitter.svg" alt="" class="icons"></a></li>
+                    <li class="footer-item"><a href="https://www.facebook.com/" class="footer-icon"><img src="../../images/facebook.svg" alt="" class="icons"></a></li>
+                    <li class="footer-item"><a href="https://www.youtube.com/" class="footer-icon"><img src="../../images/youtube.svg" alt="" class="icons"></a></li>
+                    <li class="footer-item"><a href="https://www.instagram.com/" class="footer-icon"><img src="../../images/instagram.svg" alt="" class="icons"></a></li>
+                    <li class="footer-item"><a href="https://www.twitter.com/" class="footer-icon"><img src="../../images/twitter.svg" alt="" class="icons"></a></li>
                  </ul>
             </div>
             <div class="footer-top-middle">
@@ -87,8 +87,8 @@
         <div class="footer-bootom">
             <div class="footer-rights">© All rights reserved – Finsweet</div>
             <ul class="footer-bottom-list">
-                <li class="bottom-list-item"><a href="../pages/privacy.html" class="bottom-link">Privacy Policy</a></li>
-                <li class="bottom-list-item"><a href="../pages/privacy.html" class="bottom-link">Terms & Conditions</a></li>
+                <li class="bottom-list-item"><a href="./privacy.html" class="bottom-link active">Privacy Policy</a></li>
+                <li class="bottom-list-item"><a href="../privacy.html" class="bottom-link">Terms & Conditions</a></li>
             </ul>
         </div>
     </footer>
